<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SystemUI Tuner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="wifi_strength">WiFi Strength</string>
    <string name="mobile_strength">Mobile Strength</string>
    <string name="mobile_type">Mobile Type</string>
    <string-array name="stat_bar_style">
        <item>opaque</item>
        <item>translucent</item>
        <item>semi-transparent</item>
        <item>default</item>
    </string-array>
    <string name="about">About</string>
    <string name="demo_mode">Demo Mode</string>
    <string name="exit_app">Exit App</string>
    <string name="home">Home</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="settings">Settings</string>
    <string name="status_bar">Status Bar</string>
    <string name="go">GO</string>
    <string name="reboot_required">(Reboot Required)</string>
    <string name="adb_workaround">However, just like in the setup, you can use ADB to work around it.</string>
    <string name="non_lp_bypass">If you aren\'t on Lollipop, but want to give it a shot anyway, first press the \"Grant Perms\" button, then press the \"GO\" Button.</string>
    <string name="lp_info">On Lollipop, it may be possible to do this without a computer or root.</string>
    <string name="adb_switch_replacement">Run the command below in an ADB shell to do what the switch would:</string>
    <string name="set_perms">Set Perms</string>
    <string name="sorry">Sorry...</string>
    <string name="android_issue">This is an issue in Android itself, and I can\'t do anything about it.</string>
    <string name="root_needed_toggle">To use this toggle from the phone, you need root.</string>
    <string name="example_settings_adb" translatable="false" tools:ignore="Typos">adb shell settings put system SETTINGS_VALUE VALUE</string>
    <string name="non_root_info">Don\'t worry. It\'s fine if you aren\'t. There are just some extra things you need to do in that case.</string>
    <string name="i_am_rooted">I am rooted</string>
    <string name="necessary_steps">Just need to do a few things.....</string>
    <string name="getting_started">Let\'s Get This Party Started!</string>
    <string name="are_you_rooted">So I need to know… Are you rooted?</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="not_rooted_huh">Not rooted, huh?</string>
    <string name="adb_set_up">ADB all set up? Good. Now, let\'s get started.</string>
    <string name="bummer">Bummer…</string>
    <string name="adb_instructions">For this to work, you\'ll need a computer, a USB cable and ADB.</string>
    <string name="workaround">I guess it\'s a good thing that there\'s a workaround, then.</string>
    <string name="adb_reminder">Remember to also enable \"USB Debugging\" in Developer Options, and authorize your computer.</string>
    <string name="adb_perm_grant">Run the following commands (with your device connected) in CMD or Terminal:</string>
    <string name="created_by">App created by <a href='https://forum.xda-developers.com/member.php?u=7055541'>Zacharee1</a></string>
    <string name="images_from">Launcher icon made by <a href='https://forum.xda-developers.com/member.php?u=7385240'>immarcel</a></string>
    <string name="spanish_from">Spanish translation by <a href='https://es.stackoverflow.com/users/28567/aaron-romero'>Aaron Romero</a> and <a href='https://forum.xda-developers.com/member.php?u=7055541'>Zacharee1</a></string>
    <string name="abt_desc">The main screen already explained what this app does, so I\'m not exactly sure what else to say.</string>
    <string name="abt_warn">This app isn\'t going to work on every device, though, because manufacturers are annoying. Just keep that in mind when a toggle has no effect.</string>
    <string name="debug_info">Debug Info</string>
    <string name="demo_warn">The options here are experimental! They may not work correctly, so please be careful.</string>
    <string name="enabled">Enabled</string>
    <string name="show">Show</string>
    <string name="select_time">Select Time</string>
    <string name="select_battery_level">Select Battery Level</string>
    <string name="battery_charging">Battery Charging</string>
    <string name="show_airplane_mode">Show Airplane Mode</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="status_bar_style">Status Bar Style</string>
    <string name="systemui_tuner" translatable="false">SystemUI Tuner</string>
    <string name="system_settings">System Settings</string>
    <string name="no_root_setup">No-Root Setup</string>
    <string name="home_desc">For Devices without this Activity</string>
    <string name="home_joke">Or for devices with it, I\'m not your boss.</string>
    <string name="home_extra">(If you do have the stock SystemUI Tuner, this one provides some extra goodies.)</string>
    <string name="setup_ask">You followed the setup, right? This app won\'t work unless you do.</string>
    <string name="resetup_instruction">If you skipped it, or forgot, or your root status changed, here\'s a button:</string>
    <string name="setup">Setup</string>
    <string name="misc_desc">Some random things that didn\'t fit anywhere else, but are probably useful.</string>
    <string name="misc_warn">I don\'t know if every device supports these.</string>
    <string name="stat_bar_warn">ATTENTION: Not everything here will work on your device! Manufacturers, especially Samsung and LG, tend to remove the ability to hide certain icons.</string>
    <string name="email" translatable="false">zachary.wander@gmail.com</string>
    <string name="launcher_image">Launcher Image</string>
    <string name="dnd_switch_in_vol_slider">DND Switch in Vol Slider</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="managed_profile_icon">Managed Profile Icon</string>
    <string name="battery_icon">Battery Icon</string>
    <string name="battery_percentage">Battery Percentage</string>
    <string name="cast_icon">Cast Icon</string>
    <string name="rotation_lock_icon">Rotation lock Icon</string>
    <string name="nfc_icon">NFC Icon</string>
    <string name="location_icon">Location Icon</string>
    <string name="su_icon">SU Icon</string>
    <string name="networking_data"><![CDATA[Networking & Data]]></string>
    <string name="bluetooth_icon">Bluetooth Icon</string>
    <string name="data_saver_icon">Data Saver Icon</string>
    <string name="ethernet_icon">Ethernet Icon</string>
    <string name="hotspot_icon">Hotspot Icon</string>
    <string name="mobile_icon">Mobile Icon</string>
    <string name="airplane_icon">Airplane Icon</string>
    <string name="wifi_icon">WiFi Icon</string>
    <string name="vpn_icon">VPN Icon</string>
    <string name="sounds_alerts"><![CDATA[Sounds & Alerts]]></string>
    <string name="volume">Volume Icon</string>
    <string name="headset_icon">Headset Icon</string>
    <string name="speakerphone_icon">Speakerphone Icon</string>
    <string name="time_such"><![CDATA[Time & Such]]></string>
    <string name="clock">Clock Icon</string>
    <string name="show_clock_seconds">Show Clock Seconds</string>
    <string name="alarm_clock_icon">Alarm Clock Icon</string>
    <string name="zen_icon">Zen Icon</string>
    <string name="do_not_disturb">Do Not Disturb Icon</string>
    <string name="github" translatable="false">Github</string>
    <string name="donate">Donate</string>
    <string name="google_play" translatable="false">Google Play</string>
    <string name="google" translatable="false">Google+</string>
    <string name="my_other_apps">My Other Apps</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="xda_labs" translatable="false">XDA Labs</string>
    <string name="xda_thread" translatable="false">XDA Thread</string>
    <string name="reset_blacklist">Reset Blacklist</string>
    <string name="apply">Apply</string>
    <string name="animator_duration_scale">Animator Duration Scale</string>
    <string name="transition_animation_scale">Transition Animation Scale</string>
    <string name="window_animation_scale">Window Animation Scale</string>
    <string name="animation_speeds">Animation Speeds</string>
    <string name="general">General</string>
    <string name="heads_up_notifications">Heads-Up Notifications</string>
    <string name="headphone_volume_warning">Headphone Volume Warning</string>
    <string name="custom_settings_values">Custom Settings Values</string>
    <string name="global">Global</string>
    <string name="secure">Secure</string>
    <string name="system">System</string>
    <string name="version_name">Version Name:</string>
    <string name="version_code">Version Code:</string>
    <string name="build_date">Build Date:</string>
    <string name="error">ERROR</string>
    <string name="warning">WARNING</string>
    <string name="perms_not_set">Looks like you may not have set up permissions correctly. For reference, here\'s the error:</string>
    <string name="prompt_setup">Would you like to enter setup now?</string>
    <string name="system_settings_failed">Didn\'t work :/. For reference, here\'s the error:</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="samsung_warning_message">It seems you are using a Samsung or Vivo device. If you are on Stock Firmware, SystemUI may break after a reboot! I have built in a workaround that should avoid problems, but I can\'t guarantee its effectiveness! Continue?</string>
    <string name="select_time_title">Choose Time to Display</string>
    <string name="custom_settings_warning">What lies ahead holds many dangers. I take no responsibility if you mess your device up using this feature. Please be cautious! Continue?</string>
    <string name="samsung" translatable="false" tools:ignore="UnusedResources">Samsung</string>
    <string name="knox_icon">KNOX Icon</string>
    <string name="smart_network_icon">Smart Network Icon</string>
    <string name="glove_icon">Glove Icon</string>
    <string name="private_mode_icon">Private Mode Icon</string>
    <string name="phone_signal_second_stub" translatable="false">\"Phone Signal Second Stub\"</string>
    <string name="face_icon">Face Icon</string>
    <string name="femtocell_icon">Femtocell Icon</string>
    <string name="gps_icon">GPS Icon</string>
    <string name="gesture_icon">Gesture Icon</string>
    <string name="ims_volte_icon">IMS VoLTE Icon</string>
    <string name="keyguard_wakeup_icon">KeyGuard Wakeup Icon</string>
    <string name="lbs_icon">LBS Icon</string>
    <string name="rcs_icon">RCS Icon</string>
    <string name="safezone_icon">Safezone Icon</string>
    <string name="smart_bonding_icon">Smart Bonding Icon</string>
    <string name="smart_scroll_icon">SmartScroll Icon</string>
    <string name="toddler_icon">Toddler Icon</string>
    <string name="wearable_icon">Wearable Icon</string>
    <string name="wifi_ap_icon">WiFi AP Icon</string>
    <string name="wifi_oxygen_icon">WiFi Oxygen Icon</string>
    <string name="wifi_p2p_icon">WiFi P2P Icon</string>
    <string name="wimax_icon">WiMax Icon</string>
    <string name="donate_hook">Hey, I see you\'re using my app.</string>
    <string name="donate_joke">How, you ask? Magic.</string>
    <string name="donate_request">If you\'re enjoying your time here, it\'d be absolutely amazing if you could spare a dollar or two.</string>
    <string name="donate_dont_worry">There\'s absolutely no obligation. This app is free and always will be.</string>
    <string name="touchwiz" translatable="false">TouchWiz</string>
</resources>