<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/one">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/home" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/two">
        <item
            android:id="@+id/nav_statusbar"
            android:icon="@drawable/ic_visibility_off_black"
            android:title="@string/status_bar" />
        <item
            android:id="@+id/nav_quick_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/quick_settings" />
        <item
            android:id="@+id/nav_demo_mode"
            android:icon="@drawable/ic_tv_black"
            android:title="@string/demo_mode" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/three">
        <item
            android:id="@+id/nav_touchwiz"
            android:icon="@drawable/ic_phone_android"
            android:title="@string/touchwiz" />
        <item
            android:id="@+id/nav_misc"
            android:icon="@drawable/ic_brush_black"
            android:title="@string/miscellaneous" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/four">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_list_black"
            android:title="@string/about" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/five">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_close_black"
            android:title="@string/exit_app" />
    </group>

</menu>
