<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>

        <item
            android:id="@+id/action_github"
            android:orderInCategory="100"
            android:title="@string/github"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_telegram"
            android:orderInCategory="100"
            android:title="@string/telegram"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_gplus"
            android:orderInCategory="100"
            android:title="@string/google"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_xda"
            android:orderInCategory="100"
            android:title="@string/xda_thread"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_labs"
            android:orderInCategory="100"
            android:title="@string/xda_labs"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_play"
            android:orderInCategory="100"
            android:title="@string/google_play"
            app:showAsAction="never" />
    </group>

    <group>

        <item
            android:id="@+id/action_other_apps"
            android:orderInCategory="100"
            android:title="@string/my_other_apps"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_donate"
            android:orderInCategory="100"
            android:title="@string/donate"
            app:showAsAction="never" />

    </group>
</menu>
