<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/samsung"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="italic" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Switch
                android:id="@+id/knox_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/knox_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/smart_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/smart_network_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/glove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/glove_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/gesture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/gesture_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/smart_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/smart_scroll_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/face"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/face_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/gps_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/lbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/lbs_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/wearable_gear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/wearable_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/femtoicon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/femtocell_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/rcs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/rcs_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/wifi_p2p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/wifi_p2p_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/wifi_ap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/wifi_ap_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/wifi_oxygen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/wifi_oxygen_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/phone_signal_second_stub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/phone_signal_second_stub"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/toddler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/toddler_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/ims_volte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/ims_volte_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/keyguard_wakeup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/keyguard_wakeup_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/safezone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/safezone_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/wimax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/wimax_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/smart_bonding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/smart_bonding_icon"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/private_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:checked="false"
                android:switchMinWidth="50dp"
                android:text="@string/private_mode_icon"
                android:textSize="18sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>