<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/miscellaneous"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Switch
        android:id="@+id/managed_profile_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/managed_profile_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/battery_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/battery_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/battery_percentage"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/cast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/cast_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/rotate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/rotation_lock_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/nfc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/nfc_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/location_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/su"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/su_icon"
        android:textSize="18sp" />
</LinearLayout>