<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/networking_data"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Switch
        android:id="@+id/bt_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/bluetooth_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/data_saver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/data_saver_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/ethernet_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/ethernet_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/hotspot_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/hotspot_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/mobile_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/mobile_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/airplane_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/airplane_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/wifi_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/wifi_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/vpn_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/vpn_icon"
        android:textSize="18sp" />
</LinearLayout>