<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate_hook"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/donate_joke"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView59"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/donate_request"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/donate_dont_worry"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:id="@+id/donate"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/donate" />
</LinearLayout>