<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/time_such"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Switch
        android:id="@+id/alarm_clock_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/alarm_clock_icon"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/clock"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/do_not_disturb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/do_not_disturb"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/zen_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="false"
        android:switchMinWidth="50dp"
        android:text="@string/zen_icon"
        android:textSize="18sp" />


</LinearLayout>